Fix: Fix issue of not centered overlay
Center the text-overlay.

--- a/static/css/initial_overlay.css
+++ b/static/css/initial_overlay.css
@@ -27,7 +27,7 @@
 }
 
 #overlayText {
-    top: 50%;
+    top: 35%;
     left: 25%;
     right: 25%;
     background-color: aquamarine;
